# googleplay-api

./: .gitignore  googleplay.proto  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi_publish.yaml
gpapi/: device.properties  googleplay.py  googleplay_pb2.py
