[build-system]
requires = ["setuptools>=61.0.0", "wheel", "protobuf"]
build-backend = "setuptools.build_meta"

[project]
name = "gpapi"
version = "3.0.5"
description = "Unofficial python api for google play"
readme = "README.md"
authors = [
    {name = "Tomoya Nakanishi", email = "tomoya2517@gmail.com"}
]
license = {text = "GPL3"}
requires-python = ">=3.7"
dependencies = [
    "certifi>=2025.1.31",
    "cryptography>=44.0.1",
    "protobuf>=4.24.4",
    "requests>=2.31.0",
    "urllib3>=2.0.7",
]
urls = {Homepage = "https://github.com/ntomoya/googleplay-api"}

[tool.bumpversion]
current_version = "3.0.5"
commit = true
tag = true

[tool.setuptools]
packages = ["gpapi"]
package-data = {gpapi = [
    "config.py",
    "device.properties",
    "googleplay_pb2.py",
    "googleplay.py",
    "utils.py"
]}
include-package-data = true
